[package]
name = "flite"
description = "Thin rust wrapper for the Flite TTS library"
version = "0.1.0"
authors = ["EthanYidong <ethanyidong@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/EthanYidong/flite"
links = "flite"
build = "build.rs"

exclude = ["clib/flite/tools/**", "clib/flite/testsuite/**", "clib/flite/doc/**", "clib/flite/sapi/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
const-cstr = "0.3"

[build-dependencies]
cc = "1.0"
bindgen = "0.57"
fs_extra = "1.2"

[dev-dependencies]
hound = "*"
